# agentiker-code-intel

./: .coverage  .coverage.Debian-trixie-latest-amd64-base.pid456802.XNSysU3x.HDZU0CoNMogh  .coverage.Debian-trixie-latest-amd64-base.pid456805.Xm11ycxx.HcMY72NHS1lh  .coverage.Debian-trixie-latest-amd64-base.pid456808.XZfGpuTx.HvnSAyhGl11h  .coverage.Debian-trixie-latest-amd64-base.pid456811.XP6wkHbx.HMENgb1Projh  .coveragerc  .gitignore  .woodpecker.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  _fix_dumps.py  _fmt.py  _import_graph.py  _logging.py  _profiles.py  code_intel.py  code_tools.py  fmt_err_bugs_found.json  hooks.py  lsp_bridge.py  plugin.yaml  pyproject.toml
.forgejo/workflows/: ci.yml
_scripts/: debug_syntax.py  extract_reimport.py
lsp/: __init__.py  auto_install.py  bridge.py  call_hierarchy.py  discovery.py  handlers.py  heuristics.py  tools.py  tools_core.py  tools_extra.py  tools_handler.py
lsp/bridge/: __init__.py  pool.py  server.py
lsp/extra/: __init__.py  actions.py  completion.py  definition.py  registration.py  signatures.py  tokens.py
references/: monolith-split-plan.md
scripts/: benchmark.py  generate_readme.py  generate_readme_phase2_plan.md  generate_readme_plan.md  health_check.py  install-deps.sh  pre-commit  pre-commit-hook  validate_profiles.py  version_check.py
skills/: SKILL.md  native-code-intelligence.md
skills/references/: phase5-roadmap.md  tool-reference.md  verification.md
tests/: conftest.py  test_analysis_tools.py  test_ast_fallbacks.py  test_ast_tools_converted.py  test_auto_install.py  test_base.py  test_base_cache_diagram.py  test_batch.py  test_blame.py  test_code_blast_radius.py  test_code_call_hierarchy.py  test_code_complexity.py  test_code_cycle_detector.py  test_code_dependency_graph.py  test_code_edit_tools.py  test_code_export.py  test_code_format.py  test_code_hot_paths.py  test_code_implementations.py  test_code_intel.py  test_code_intel_gaps.py  test_code_intel_tools.py  test_code_metrics.py  test_code_migration.py  test_code_overview.py  test_code_pr_impact.py  test_code_query_new_intents.py  test_code_search_by_error.py  test_code_security.py  test_code_type_hierarchy.py  test_code_unused_finder.py  test_core_project.py  test_core_symbols.py  test_core_tools.py  test_custom_tools.py  test_diff_analysis.py  test_e2e_lifecycle.py  test_e2e_real_tools.py  test_e2e_workflows.py  test_edit_edge_cases.py  (+45 more)
tools/: __init__.py  analysis.py  ast_edit.py  base.py  batch.py  blame.py  cache.py  capsule.py  complexity.py  diagram.py  diff_analysis.py  duplicates_extractor.py  edit.py  explain_extractor.py  export.py  git.py  graph_analysis.py  impact.py  knowledge_graph.py  language.py  metrics.py  migration.py  overview.py  pattern.py  query.py  refactor_extractor.py  review_assistant.py  search.py  search_by_error.py  search_extractor.py  security.py  symbol_queries.py  symbols.py  symbols_extractor.py  test_coverage.py  testgen.py  timeline.py  type_hierarchy.py  unused.py  workspace.py
tools/ast_edit_tools/: __init__.py  base.py  insert.py  move.py  replace_body.py  safe_delete.py  schemas.py
