[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "agentiker-code-intel"
version = "0.6.7"
description = "AST-aware code intelligence for Hermes Agent — tree-sitter + ast-grep + LSP"
authors = [
    {name = "Johannes Lettner"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "tree-sitter>=0.24.0",
    "ast-grep-py>=0.37.0",
    "rich>=13.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
    "hypothesis>=6.0",
]

[tool.setuptools.packages.find]
include = ["code_intel", "code_intel.*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "integration: Tests requiring LSP server or heavy AST operations",
]

[[tool.pyright]]
reportMissingImports = false
reportMissingTypeStubs = false
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]
"lsp_bridge.py" = ["F405"]
"tests/*" = ["E402"]
"lsp/bridge.py" = ["E402"]

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["code_intel"]
omit = ["tests/*", "scripts/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
